Completed image creation with an article